<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_encode_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="dn.Outguesser.encodeWindow">

    <Button android:id="@+id/imChooseEnc"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_chooseImage"
        android:onClick="onClickChooseImg"
        />
    <TextView
        android:layout_weight="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encode_Intro"
        android:textColor="#000000"
        android:textSize="17sp"
        android:fontFamily="sans-serif-medium" />

    <EditText android:id="@+id/edit_message"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/textinputborder"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/message_hint"
        android:maxLength="254"
        android:imeOptions="actionSend"
        android:inputType="textLongMessage"
        android:maxLines="1"
        android:scrollHorizontally="true" />
    <EditText android:id="@+id/edit_password"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/textinputborder"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/password_hint"
        android:imeOptions="actionSend"
        android:maxLines="1"
        android:inputType="textPassword"
        android:scrollHorizontally="true" />
    <EditText android:id="@+id/edit_filename"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/textinputborder"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/filename_hint"
        android:imeOptions="actionSend"
        android:inputType="textLongMessage"
        android:maxLines="1"
        android:scrollHorizontally="true" />
    <Button android:id="@+id/encodeButton"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_startEncode"
        android:onClick="onClickRun"
        />


</LinearLayout>
