<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_decode_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="dn.Outguesser.decodeWindow">


    <Button android:id="@+id/imChooseDec"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_chooseImage"
        android:onClick="onClickChooseImg"
        />
    <EditText android:id="@+id/edit_password"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/textinputborder"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/password_hint"
        android:imeOptions="actionSend"
        android:maxLines="1"
        android:inputType="textPassword"
        android:scrollHorizontally="true" />
    <Button android:id="@+id/decodeButton"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_startDecode"
        android:onClick="onClickRun"
        />
    <TextView android:id="@+id/display_message"
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/textinputborder"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/decode_Msg"
        android:textSize="18sp" />



</LinearLayout>
