<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_analyze_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="dn.Outguesser.analyzeWindow">


    <Button android:id="@+id/imChooseAna"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_chooseImage"
        android:onClick="onClickChooseImg"
        />
    <TextView
        android:layout_weight="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/analyze_Intro"
        android:textColor="#000000"
        android:textSize="17sp"
        android:fontFamily="sans-serif-medium" />

    <Button android:id="@+id/detectButton"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_startDetect"
        android:onClick="onClickRun"
        />
    <TextView android:id="@+id/analysisResults"
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/textinputborder"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="18sp" />



</LinearLayout>
